crates/pcb-star/tests/snapshots/input__component_factory_rejects_interface_even_with_single_net.snap
---
source: crates/diode_star/tests/input.rs
expression: netlist
---
Error: [TEMP_DIR]test.star:12:1-25:2 Pin 'ICLK' must be connected to a Net, got InterfaceValue
