crates/pcb-star/tests/snapshots/input__component_rejects_interface_even_with_single_net.snap
---
source: crates/diode_star/tests/input.rs
expression: netlist
---
Error: [TEMP_DIR]test.star:9:1-17:2 Pin 'in' must be connected to a Net, got InterfaceValue
