crates/pcb-star/tests/snapshots/input__snapshot_missing_required_inputs_should_error.snap
---
source: projects/cli/crates/diode_star/tests/input.rs
expression: netlist
---
(export (version "E")
  (design
    (source "unknown")
    (date "")
    (tool "pcb"))
  (components
  )
  (libparts
  )
  (nets
  )
)
Error: [TEMP_DIR]top.star:4:1-7:2 Error instantiating `my_sub`
Error: [TEMP_DIR]my_sub.star:3:7-21 Input 'pwr' is required but was not provided and no default value was given
