crates/pcb-star/tests/snapshots/input__snapshot_optional_inputs_return_none.snap
---
source: projects/cli/crates/diode_star/tests/input.rs
expression: netlist
---
(export (version "E")
  (design
    (source "unknown")
    (date "")
    (tool "pcb"))
  (components
    (comp (ref "U1")
      (value "?")
      (footprint "TEST:0402")
      (libsource (lib "lib") (part "?") (description "unknown"))
      (sheetpath (names "sub.comp0") (tstamps "c36451f5-9361-5aad-8949-5d9502853fc5"))
      (tstamps "c36451f5-9361-5aad-8949-5d9502853fc5")
      (property (name "Reference") (value "U1"))
      (property (name "symbol_path") (value "None"))
    )
  )
  (libparts
    (libpart (lib "lib") (part "?")
      (description "")
      (docs "~")
      (footprints
        (fp "*"))
      (pins
        (pin (num "1") (name "V") (type "stereo"))
      )
    )
  )
  (nets
    (net (code "1") (name "sub.comp0.V")
      (node (ref "U1") (pin "1") (pintype "stereo"))
    )
  )
)
